duniverse/menhirLib.20200211/test/static/bad/nonlinear-pattern-tuple.exp
File "nonlinear-pattern-tuple.mly", line 8, characters 17-18:
File "nonlinear-pattern-tuple.mly", line 8, characters 6-7:
Error: The variable y is bound several times.
